Rigidbody simulation issue with new depsgraph #48582

Closed
opened 2016-06-03 16:22:10 +02:00 by Martin Felke · 4 comments
Member

System Information
Linux Mint 17.3 x64, GTX 580

Blender Version
Broken: 2.77.1 cd768a8 with --enable-new-depsgraph
Worked: any version without --enable-new-depsgraph

Short description of error
When making the default cube an Active Rigidbody and hitting Alt A, it doesnt simulate as in falls down.
The cache bar in timeline also doesnt fill up. Seems its being ignored by the Rigidbody simulation
Changing the rigidbody type (to Passive and back to Active) or adding more rigidbodies might "fix" this issue temporarily.

Exact steps for others to reproduce the error
Just Add an Active Rigidbody to the default cube and press Alt A

**System Information** Linux Mint 17.3 x64, GTX 580 **Blender Version** Broken: 2.77.1 cd768a8 with --enable-new-depsgraph Worked: any version without --enable-new-depsgraph **Short description of error** When making the default cube an Active Rigidbody and hitting Alt A, it doesnt simulate as in falls down. The cache bar in timeline also doesnt fill up. Seems its being ignored by the Rigidbody simulation Changing the rigidbody type (to Passive and back to Active) or adding more rigidbodies might "fix" this issue temporarily. **Exact steps for others to reproduce the error** Just Add an Active Rigidbody to the default cube and press Alt A
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Martin Felke 2016-06-03 16:22:10 +02:00
Author
Member

Added subscriber: @scorpion81

Added subscriber: @scorpion81

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 122c59fba4

This issue was referenced by 122c59fba49e212717e8c7302ee01d6126dff427
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48582
No description provided.